--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -26,7 +26,7 @@
       </ion-item> -->
             <ion-item>
                 <ion-label class="remember" onclick="resetPassword()">¿Haz olvidado tu contraseña?</ion-label>
-                <ion-label color="primary" button routerLink='/register'><a class="register">Registrate</a></ion-label>
+                <ion-label color="dark" button routerLink='/register'><a class="register">Registrate</a></ion-label>
             </ion-item>
         </ion-list>
         <ion-button color="dark" expand="block"  type="ngSubmit">Iniciar</ion-button>
