--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,6 +3,9 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="/login"></ion-back-button>
         </ion-buttons>
+        <ion-button slot="end" (click)="cerrarSesion()" expand="block" fill="clear" shape="round">
+          Cerrar Sesión
+        </ion-button>
     </ion-toolbar>
 </ion-header>
 <!-- <div class="relleno" ></div> -->
