--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -5,5 +5,13 @@
 </ion-header>
 
 <ion-content>
-
+<div *ngFor="let ac of Arraycircuits; let i = index">
+		
+		<div>
+			
+			<div>
+				<p></p>
+			</div>
+		</div>
+	</div>
 </ion-content>
