ver info de lugar seleccionado

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -50,9 +50,8 @@
     <ion-row >
       <ion-col>        
   
-        
         <ion-virtual-scroll [items]="items" approxItemHeight="300px">
-          <ion-card *virtualItem="let item">
+          <ion-card *virtualItem="let item" id="{{ item.id }}" [routerLink]="['/places', item.id]">
             <ion-card-header>
                 <ion-list>
                   <ion-item class="cabezera">
@@ -64,7 +63,7 @@
                 
             </ion-card-header>
             <p>{{ item.descripcion }}</p>
-            <a routerLink="/places" >
+            <a>
               <ion-img class="foto" [src]="item.image"  [alt]="item.name"></ion-img>
             </a>
           <ion-card-content>
