descripcion de lugar completa

--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -3,10 +3,10 @@
   	<ion-buttons slot="start">
             <ion-back-button defaultHref="home" color="primary"></ion-back-button>
         </ion-buttons>
-    <ion-title>Info lugar completa</ion-title>
+    <ion-title>{{ items.nombre }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+{{ items.descripcion }}
 </ion-content>
