--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -37,7 +37,7 @@
             </ion-slides>
         </div>
         <div class="divc">
-            <p class="text">{{items.descripcion}}<a class="verMas" [routerLink]="['/modal-info', items.id]">Ver más</a></p>
+            <p class="text">{{items.descripcion}}<a class="verMas" [routerLink]="['/descripcion', items.id]">Ver más</a></p>
         </div>
         <div class="divd">
             <div id="mapa-box"></div>
