--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -13,26 +13,11 @@
 </ion-header>
 <ion-content>
     <div class="padre">
-        <div class="diva"><img class="imgPrincipal" id="foto"></div>
+        <div class="diva"><img class="imgPrincipal" id="foto" src="{{ items.url }}"></div>
         <div class="divb">
             <ion-slides class="slidePadre" pager="true" [options]="slideOpts">
-                <ion-slide class="slideHijo">
-                    <div id="imagenMini"><img (click)=cambiarImagen() class="imgGaleria" src="../../../assets/img/afe.JPG"></div>
-                </ion-slide>
-                <ion-slide class="slideHijo">
-                    <div id="imagenMini"><img (click)=cambiarImagen() class="imgGaleria" src="../../../assets/img/afe.JPG"></div>
-                </ion-slide>
-                <ion-slide class="slideHijo">
-                    <div id="imagenMini"><img (click)=cambiarImagen() class="imgGaleria" src="../../../assets/img/afe.JPG"></div>
-                </ion-slide>
-                <ion-slide class="slideHijo">
-                    <div id="imagenMini"><img (click)=cambiarImagen() class="imgGaleria" src="../../../assets/img/afe.JPG"></div>
-                </ion-slide>
-                <ion-slide class="slideHijo">
-                    <div id="imagenMini"><img (click)=cambiarImagen() class="imgGaleria" src="../../../assets/img/afe.JPG"></div>
-                </ion-slide>
-                <ion-slide class="slideHijo">
-                    <div id="imagenMini"><img (click)=cambiarImagen() class="imgGaleria" src="../../../assets/img/afe.JPG"></div>
+                <ion-slide class="slideHijo" *ngFor="let item of items.url">
+                    <div id="imagenMini"><img (click)=cambiarImagen() class="imgGaleria" src="{{ item }}"></div>
                 </ion-slide>
             </ion-slides>
         </div>
