--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -114,6 +114,28 @@ ion-title {
 
 .sugerencia{
     width: 50%;
+    display: flex;
+    flex-direction: row;
+}
+
+.sug{
+    border-radius: 8px;
+}
+
+.interes{
+    margin: 0 0 2% 0;
+}
+
+.infoSug{
+    margin: 0 0 0 5%;
+}
+
+.iconEstilos{
+    margin: 2% 2% 0 2%;
+}
+
+.iconAuto{
+    margin: 2% 2% 0 0;
 }
 
 // .estrellas{
