--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -23,9 +23,15 @@
         </div>
         <div class="divc">
             <div class="iconos">
-                <div class="iconAuto" *ngIf="items.auto == 1"><ion-icon name="car-outline"></ion-icon></div>
-                <div class="iconEstilos" *ngIf="items.bicicleta == 1"><ion-icon name="bicycle-outline"></ion-icon></div>
-                <div class="iconEstilos" *ngIf="items.caminar == 1"><ion-icon name="walk-outline"></ion-icon></div>
+                <div class="iconAuto" *ngIf="items.auto == 1">
+                    <ion-icon name="car-outline"></ion-icon>
+                </div>
+                <div class="iconEstilos" *ngIf="items.bicicleta == 1">
+                    <ion-icon name="bicycle-outline"></ion-icon>
+                </div>
+                <div class="iconEstilos" *ngIf="items.caminar == 1">
+                    <ion-icon name="walk-outline"></ion-icon>
+                </div>
             </div>
             <p class="text">{{items.descripcion}}<a class="verMas" [routerLink]="['/descripcion', items.id]">Ver más</a></p>
         </div>
@@ -46,11 +52,25 @@
         <div class="divf">
             <div class="sugerencia" [routerLink]="['/home']">
                 <img class="sug" src="https://firebasestorage.googleapis.com/v0/b/appdominga.appspot.com/o/0%2Ffincapiedra-01.jpg?alt=media&token=7cbc502b-13fc-4b19-b1b5-6bf30aea69c3" alt="" width="40%" height="60%">
-                <div class="infoSug">Nombre diraccion</div>
+                <div class="infoSug">
+                    <div class="sugNombre">Nombre</div>
+                    <div class="sugDireccion">Direccion</div>
+                    <div class="sugTelefono">
+                        <div>Tel: &nbsp;</div>
+                        <div class="numTelefono">43423658</div>
+                    </div>
+                </div>
             </div>
             <div class="sugerencia" [routerLink]="['/home']">
                 <img class="sug" src="https://firebasestorage.googleapis.com/v0/b/appdominga.appspot.com/o/0%2Ffincapiedra-01.jpg?alt=media&token=7cbc502b-13fc-4b19-b1b5-6bf30aea69c3" alt="" width="40%" height="60%">
-                <div class="infoSug">Nombre direccion</div>
+                <div class="infoSug">
+                    <div class="sugNombre">Nombre</div>
+                    <div class="sugDireccion">Direccion</div>
+                    <div class="sugTelefono">
+                        <div>Tel:&nbsp;</div>
+                        <div class="numTelefono">43423658</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
