--- a/src/app/pages/more-options/more-options.page.html
+++ b/src/app/pages/more-options/more-options.page.html
@@ -8,55 +8,65 @@
 <ion-content>
     <ion-searchbar placeholder=""></ion-searchbar>
     <ion-grid>
-        <ion-row>
-            <ion-col size="2"><a routerLink="#">
-                    <div class="circulo icon1 sleep">
-                        <ion-icon class="icon-options" name="bed"></ion-icon>
+        <a class="hrefIcon" routerLink="/where-sleep">
+            <ion-row>
+                <ion-col size="2">
+                    <div>
+                        <ion-img src="/assets/icon/dormir.png"></ion-img>
                     </div>
-                </a> </ion-col>
-            <ion-col>
-                <p class="text">¿Dónde Dormir?</p>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col size="2"><a routerLink="#">
-                    <div class="circulo icon2 eat">
-                        <ion-icon class="icon-options" name="restaurant"></ion-icon>
+                </ion-col>
+                <ion-col>
+                    <p class="text">¿Dónde Dormir?</p>
+                </ion-col>
+            </ion-row>
+        </a>
+        <a class="hrefIcon" routerLink="/where-eat">
+            <ion-row>
+                <ion-col size="2">
+                    <div>
+                        <ion-img src="/assets/icon/comida.png"></ion-img>
                     </div>
-                </a></ion-col>
-            <ion-col>
-                <p class="text">¿Dónde Comer?</p>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col size="2"><a routerLink="#">
-                    <div class="circulo icon3 art">
-                        <ion-icon class="icon-options" name="musical-notes"></ion-icon>
+                </ion-col>
+                <ion-col>
+                    <p class="text">¿Dónde Comer?</p>
+                </ion-col>
+            </ion-row>
+        </a>
+        <a class="hrefIcon" routerLink="/art-culture">
+            <ion-row>
+                <ion-col size="2">
+                    <div>
+                        <ion-img src="/assets/icon/arteycultura.png"></ion-img>
                     </div>
-                </a></ion-col>
-            <ion-col>
-                <p class="text">Arte y Cultura</p>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col size="2"><a routerLink="#">
-                    <div class="circulo icon4 events">
-                        <ion-icon class="icon-options" name="megaphone"></ion-icon>
+                </ion-col>
+                <ion-col>
+                    <p class="text">Arte y Cultura</p>
+                </ion-col>
+            </ion-row>
+        </a>
+        <a class="hrefIcon" routerLink="/sj-events">
+            <ion-row>
+                <ion-col size="2">
+                    <div>
+                        <ion-img src="/assets/icon/eventos.png"></ion-img>
                     </div>
-                </a></ion-col>
-            <ion-col>
-                <p class="text">SJ Eventos</p>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col size="2"><a routerLink="#">
-                    <div class="circulo icon5 visits">
-                        <ion-icon class="icon-options" name="walk"></ion-icon>
+                </ion-col>
+                <ion-col>
+                    <p class="text">SJ Eventos</p>
+                </ion-col>
+            </ion-row>
+        </a>
+        <a class="hrefIcon" routerLink="/guided-visits">
+            <ion-row>
+                <ion-col size="2">
+                    <div>
+                        <!-- <ion-img src="/assets/icon/dormir.png"></ion-img> -->
                     </div>
-                </a></ion-col>
-            <ion-col>
-                <p class="text">Visitas guiadas</p>
-            </ion-col>
-        </ion-row>
+                </ion-col>
+                <ion-col>
+                    <p class="text">Visitas guiadas</p>
+                </ion-col>
+            </ion-row>
+        </a>
     </ion-grid>
 </ion-content>
