--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -1,9 +1,29 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>whereSleep</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="circuits">
+    	<ion-img slot="start" src="/assets/icon/dormir.png"></ion-img>
+        <ion-title>¿Dónde Dormir?</ion-title>
+    </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+	<ion-searchbar placeholder=""></ion-searchbar>
+    <ion-list>
+        <ion-item *ngFor="let item of sleep">
+            <div class="padre">
+                <div class="imagen">
+                    <ion-avatar slot="start">
+                        <img src="{{ item.imagen }}">
+                    </ion-avatar>
+                </div>
+                <div class="info">
+                    <ion-label>
+                        <h2>{{ item.nombre }}</h2>
+                        <div class="infoAbajo">
+                            <h3>{{ item.direccion }}</h3>
+                            <p><span>Tel: </span>{{ item.telefono }}</p>
+                        </div>
+                    </ion-label>
+                </div>
+            </div>
+        </ion-item>
+    </ion-list>
 </ion-content>
