--- a/src/app/pages/circuits/circuits.page.scss
+++ b/src/app/pages/circuits/circuits.page.scss
@@ -1,5 +1,43 @@
-.icon-info {
+*{
+	margin: 0;
+	padding: 0;
+}
+
+.iconInfo {
     color: #fff;
-    font-size: 250%;
-    margin-right: 6%;
+    width: 12%;
+    margin-right: 8%;
+}
+
+.sc-ion-searchbar-md-h {
+    --box-shadow: none !important;
+    padding: 3% 0 !important;
+}
+
+ion-card{
+	margin: 0 5% 5% 5%;
+	border: none !important;
+	box-shadow: none !important;
+	border-radius: 15px !important;
+}
+
+ion-card-header{
+	padding: 4% !important;
+}
+
+ion-card {
+    img {
+        height: 25vh !important;
+        width: 100% !important;
+        max-width: 100%;
+        align-items: center;
+    }
+
+    ion-card-content {
+        padding: 0 !important;
+    }
+}
+
+.estrellas{
+	float: right;
 }
