--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -1,5 +1,8 @@
 <ion-header>
     <ion-toolbar color="circuits">
+    	<ion-buttons slot="start">
+            <ion-back-button defaultHref="home" color="back"></ion-back-button>
+        </ion-buttons>
     	<ion-img slot="start" src="/assets/icon/dormir.png"></ion-img>
         <ion-title>¿Dónde Dormir?</ion-title>
     </ion-toolbar>
