--- a/src/app/pages/art-culture/art-culture.page.html
+++ b/src/app/pages/art-culture/art-culture.page.html
@@ -1,9 +1,10 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>art-culture</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="home" color="back"></ion-back-button>
+        </ion-buttons>
+        <ion-title>art-culture</ion-title>
+    </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
 </ion-content>
