cards home arregladas

--- a/src/app/pages/circuits/circuits.page.html
+++ b/src/app/pages/circuits/circuits.page.html
@@ -14,8 +14,8 @@
         </ion-card-header>
         <ion-card-content>
             <img width="auto" height="40%" src="{{ item.imagen }}" alt="{{ item.nombre }}">
-            <div>
-                {{ item.duracion }}
+            <div class="duracion">
+                Duración: {{ item.duracion }}
                 <div class="estrellas">
                     <ion-icon name="star"></ion-icon>
                     <ion-icon name="star"></ion-icon>
