--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,7 +8,7 @@
         </ion-button>
     </ion-toolbar>
 </ion-header>
-<ion-content scroll-y="false">
+<ion-content>
     <div class="padre">
         <div class="slider">
             <ion-slides scrollbar="true" pager="true" [options]="slideOpts">
@@ -52,20 +52,25 @@
                 <ion-slide *ngFor="let item of items" id="{{ item.id }}" [routerLink]="['/places', item.id]">
                     <ion-card>
                         <ion-card-header color="options">
-                            <ion-card-title class="cardTitle">{{ item.nombre }} <span class="categoria">(Rural)</span>
-                                <ion-icon class="iconTitle" name="leaf-outline"></ion-icon>
+                            <ion-card-title class="cardTitle">
+                                <div style="text-align: left">{{ item.nombre }}<span class="categoria">&nbsp;(Rural)</span>
+                                <ion-icon class="iconTitle" name="leaf-outline"></ion-icon></div> 
                             </ion-card-title>
                         </ion-card-header>
                         <ion-card-content>
                             <img class="foto" [src]="item.url" [alt]="item.nombre" />
-                            <ion-item>
-                                <ion-label slot="start">100 metros</ion-label>
-                                <ion-icon class="estrella" name="star"></ion-icon>
-                                <ion-icon class="estrella" name="star"></ion-icon>
-                                <ion-icon class="estrella" name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                                <ion-icon name="star"></ion-icon>
-                            </ion-item>
+                            <div>
+                                <div class="distancia">
+                                    <ion-label slot="start">100 metros</ion-label>
+                                </div>
+                                <div class="valoracion">
+                                    <ion-icon class="estrella" name="star"></ion-icon>
+                                    <ion-icon class="estrella" name="star"></ion-icon>
+                                    <ion-icon class="estrella" name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                </div>
+                            </div>
                         </ion-card-content>
                     </ion-card>
                 </ion-slide>
