--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -15,10 +15,10 @@
     width: 65%;
 }
 
-.iconMenu{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+.iconMenu {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .contenedor-iconos {
@@ -29,34 +29,27 @@
     margin: 2% 4% 3% 4%;
 }
 
-.imgSlider{
-  width: 100%;
-  height: 100%;
-}
-
-ion-card {
-    height: 30%;
-    margin: 0 6% 5% 6%;
+.imgSlider {
+    width: 100%;
+    height: 100%;
 }
 
 ion-card-header {
     padding: 4% !important;
+    color: #ffffff;
 }
 
 ion-label {
-    font-family: 'Barlow', ;
+    font-family: 'Barlow';
     font-size: 11pt;
-    margin-top: 0px !important;
-    margin-bottom: 0px !important;
 }
 
 .card-content-md {
     padding: 0px !important;
 }
 
-.cardTitle {
-    font-weight: bold;
-    color: #ffffff !important;
+.cardTitle ion-inherit-color .md .hydrated {
+    font-weight: 500;
 }
 
 .iconTitle {
@@ -67,25 +60,48 @@ ion-label {
     font-size: 60%;
     font-weight: 100;
     color: #000000;
+    text-align: left;
 }
 
-.padre{
-  height: 100%;
+.padre {
+    height: 100%;
 }
 
-.slider{
-  height: 45%;
+.slider {
+    height: 45%;
 }
 
-.menu{
-  height: 10%;
+.menu {
+    height: 10%;
 }
 
-.cards{
-  height: 40%;
+.cards {
+    height: 40%;
 }
 
-ion-card{
-  height: 100%;
-  margin: 0 8% 0 8%;
+ion-card {
+    height: 100%;
+    margin: 0 8% 0 8%;
 }
+
+ion-card {
+    img {
+        height: 25vh !important;
+        width: 100% !important;
+        max-width: 100%;
+        align-items: center;
+    }
+}
+
+.distancia {
+    float: left;
+    margin-left: 3%;
+    padding: 0;
+}
+
+.valoracion {
+    float: right;
+    margin-right: 3%;
+    padding: 0;
+}
+
