--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -25,7 +25,7 @@
         <ion-label color="primary" >Registrarse</ion-label>
       </ion-item> -->
             <ion-item>
-                <ion-label class="remember" onclick="resetPassword()">¿Has olvidado tu contraseña?</ion-label>
+                <ion-label class="remember" (click)="resetPassword()">¿Has olvidado tu contraseña?</ion-label>
                 <ion-label color="dark" button routerLink='/register'><a class="register">Registrate</a></ion-label>
             </ion-item>
         </ion-list>
